--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.1",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
-    "twin.macro": "^3.3.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
