feat: Add Oauth login/register
Still need to fix the prisma schema

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://jacksonh201325:jacksonh201325@cluster0.zryv6fp.mongodb.net/test"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID="c139c66dae304fe73a65"
+GITHUB_SECRET="95c3304532e19678c7f76d96f7cd1c78e4bbdfee"
+
+GOOGLE_CLIENT_ID="38138073742-j1026vc433078cb3c10uvoljprvjuru9.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="F2acKIC9YleRz1-eBjJRR90w"
